2008-10-04  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush (monodocer update; mkdelegates doc update).

2008-10-04  Jonathan Pryor  <jpryor@novell.com>

	* mkdelegates: Add "traditional" currying extension methods.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush TextReader changes.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Ignore more warnings when building unit tests.
	* doc/en/**: Flush .Tokens() changes.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add
	  Mono.Rocks/StreamConverter.cs to the build.
	* doc/en/**: Flush SystemStreamConverter changes.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush IValueReader/IValueWriter changes.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush all the doc changes from previous commit.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add
	  Mono.Rocks/EnumerableValueReader.cs, Mono.Rocks/IValueReader.cs,
	  Mono.Rocks/IValueWriter.cs, Mono.Rocks/SystemStreamConverter.cs,
	  Mono.Rocks/TextValueReader.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/EnumerableValueReaderTest.cs, 
	  Tests/Mono.Rocks.Tests/SystemStreamConverterTest.cs, 
	  Tests/Mono.Rocks.Tests/TextValueReaderTest.cs to the build.

2008-09-26  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Type.cs 
	  to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/TypeTest.cs to the build.

2008-09-25  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Add Stream.WriteTo() extension method.

2008-09-25  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.

2008-09-23  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: `check` shouldn't test NotWorking tests; add `check-all`